chore: use same Dockerfile as other tsm apps