@@ -1,22 +1,8 @@
-FROM eclipse-temurin:21 AS jre-build
-# Create a custom Java runtime
-RUN $JAVA_HOME/bin/jlink \
-         --add-modules ALL-MODULE-PATH \
-         --strip-debug \
-         --no-man-pages \
-         --no-header-files \
-         --compress=2 \
-         --output /javaruntime
-# Runtime
-FROM gcr.io/distroless/base-debian12
+FROM gcr.io/distroless/java21-debian12@sha256:f995f26f78b65251a0511109b07401a5c6e4d7b5284ae73e8d6577d24ff26763
 WORKDIR /app
-ENV TZ="Europe/Oslo"
-ENV JAVA_HOME=/opt/java/openjdk
-ENV PATH="${JAVA_HOME}/bin:${PATH}"
-ENV JAVA_OPTS="-Dlogback.configurationFile=logback.xml"
-COPY --from=jre-build /javaruntime $JAVA_HOME
-COPY --from=jre-build /lib/x86_64-linux-gnu/libz.so.1 /lib/x86_64-linux-gnu/libz.so.1
 COPY build/libs/app-*.jar app.jar
+ENV JAVA_OPTS="-Dlogback.configurationFile=logback.xml"
+ENV TZ="Europe/Oslo"
 EXPOSE 8080
 USER nonroot
-CMD ["java", "-jar", "app.jar"]
+CMD [ "app.jar" ]
